added show action route for reps

--- a/app/views/representatives/show.html.erb
+++ b/app/views/representatives/show.html.erb
@@ -4,7 +4,7 @@
   }
 </style>
 
-<div class="overview">
+<div>
   <img class="rep-photo" src="<%= @representative.photo %>" width="500" height="500">
   <h1 class="text-center"><%= @representative.name %></h1>
   <h2 class="text-center"><%= @representative.party %></h2>
