added default no photo found img

--- a/app/views/representatives/show.html.erb
+++ b/app/views/representatives/show.html.erb
@@ -5,7 +5,7 @@
 </style>
 
 <div>
-  <img class="rep-photo" src="<%= @representative.photo %>" width="500" height="500">
+  <img class="rep-photo" src="../../assets/images/no-img.jpeg" width="500" height="500">
   <h1 class="text-center"><%= @representative.name %></h1>
   <h2 class="text-center"><%= @representative.party %></h2>
   <h2 class="text-center"><%= @representative.address %></h2>
