accessing address thru rep

--- a/app/views/representatives/show.html.erb
+++ b/app/views/representatives/show.html.erb
@@ -10,9 +10,9 @@
   <h1 class="text-center"><%= @representative.name %></h1>
   <h2 class="text-center"><%= @representative.party %></h2>
   <h3 class="text-center">
-    <%= @representative.address.street %>
-    <%= @representative.address.city %>
-    <%= @representative.address.state %>
-    <%= @representative.address.zip %>
+    <%= @representative.street %>
+    <%= @representative.city %>
+    <%= @representative.state %>
+    <%= @representative.zip %>
   </h3>
 </div>
