--- a/app/views/map/county.html.haml
+++ b/app/views/map/county.html.haml
@@ -24,12 +24,12 @@
                 %th Office
                 %th Links
             %tbody
-              - @representatives.each do |rep|
+              - search_representatives_path(address: @county).each do |rep|
                 %tr
                   %td= rep.name
                   %td= rep.title
                   %td
-                    = link_to 'View', search_representatives_path(address: #{@county.name}, #{@state.name}, United States), class: 'btn btn-primary'
+                    = link_to 'View', search_representatives_path(address: @county.name), class: 'btn btn-primary'
 #actionmap-info-box
 .d-none#actionmap-info-container{ 'data-counties': @county_details.to_json, 'data-state': @state.to_json,
 'data-state-topojson-file': asset_path("states/#{@state[:symbol].downcase}.topo.json"),
