--- a/app/views/map/county.html.haml
+++ b/app/views/map/county.html.haml
@@ -6,27 +6,38 @@
             .overflow-hidden.bg-light.text-center.mb-3
                 .overflow-auto.py-3
                     %svg.d-inline#actionmap-state-counties-view{ version: 1.1, xmlns: 'http://www.w3.org/2000/svg' }
-                        %title  Map of #{@state.name} highlighting #{@county.name}
+                        %title  Map of #{@county.name} highlighting #{@county.name}
                         /* SVG element will be filled using d3.js and a topojson file. */
 .row
-  .col-12
-    %section.my-4
-      %h2.text-center
-        = "#{@county.name}, #{@state}"
-
-      #actionmap-representatives-table
-        .table-responsive-md
-          %table.table.table-striped.table-hover
-            %caption Representatives for #{@county}
-            %thead.thead-dark
-              %tr
-                %th Name
-                %th Office
-            %tbody
-              - search_representatives_path(address: @county.name).each do |rep|
-                %tr
-                  %td= rep.name
-                  %td= rep.title
+    .col-12.col-lg-8.offset-lg-2
+        #actionmap-state-counties-details
+            .card
+                .card-header#actionmap-counties-details-header
+                    %h3.text-center
+                        %button.btn.btn-link.collapsed{ 'data-toggle': 'collapse',
+                        'data-target': '#actionmap-state-details-collapse', 'aria-expanded': false,
+                        'aria-controls': 'actionmap-state-details-collapse' } Representatives in #{@county.name}
+                .collapse#actionmap-state-details-collapse{ 'data-parent': '#actionmap-counties-details-header',
+                'aria-labelledby': '#actionmap-counties-details-header' }
+                    .card-body
+                        .table-responsive-md
+                            %table.table.table-striped.table-hover#actionmap-state-counties-table
+                                %caption Table of Representatives
+                                %thead.thead-dark
+                                    %tr
+                                        %th Name
+                                        %th Office
+                                        %th Links
+                                %tbody
+                                    - search_representatives_path(address: @county.name).each_with_index do |rep, _index|
+                                        %tr
+                                            %td
+                                                = link_to rep.name, representative_path(rep.id), class: 'btn btn-link'
+                                            %td= rep.title
+                                            %td
+                                                = link_to representative_news_items_path(rep.id), class: 'btn btn-primary' do
+                                                    %i.fas.fa-newspaper
+                                                    News Articles
 #actionmap-info-box
 .d-none#actionmap-info-container{ 'data-counties': @county_details.to_json, 'data-state': @state.to_json,
 'data-state-topojson-file': asset_path("states/#{@state[:symbol].downcase}.topo.json"),
