--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,6 +13,7 @@
         .d-flex.flex-column.min-vh-100
             .flex-shrink-0
                 = render 'layouts/navbar'
+                authenticated: @authenticated
             .flex-grow-1
                 .container-fluid
                     - if flash[:notice].present? || flash[:alert].present?
