Finally got the search view to work as it was intended with the model and the controller working right

--- a/app/views/campaign_finance/search.html.erb
+++ b/app/views/campaign_finance/search.html.erb
@@ -11,7 +11,7 @@
           <tbody>
             <% @data.each do |candidate| %>
               <tr>
-                <td><%= candidate['name'] %></td>
+                <td><%=candidate["name"] %></td>
               </tr>
             <% end %>
           </tbody>
